# genos

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ATTRIBUTIONS/: README.md
examples/: example.py
src/genos/: __init__.py  instantiate.py  panini_example.py
src/genos/examples/: __init__.py  complex_examples.py  simple_examples.py
src/my_package/: utils.py
tests/: test_instantiate.py  test_utils.py
utility-scripts/: check_python37.sh
